# osal

./: CMakeLists.txt
src/bsp/generic-freertos/: CMakeLists.txt  build_options.cmake
src/bsp/generic-freertos/src/: bsp_console.c  bsp_start.c  generic_freertos_bsp_internal.h
src/os/freertos/: CMakeLists.txt  build_options.cmake
src/os/freertos/inc/: os-freertos.h  os-impl-binsem.h  os-impl-console.h  os-impl-countsem.h  os-impl-mutex.h  os-impl-queue.h  os-impl-task.h  os-impl-timebase.h
src/os/freertos/src/: os-impl-binsem.c  os-impl-common.c  os-impl-console.c  os-impl-countsem.c  os-impl-idmap.c  os-impl-mutex.c  os-impl-queue.c  os-impl-task.c  os-impl-timebase.c
src/os/freertos/todo/: os-impl-file.c  os-impl-filesys.c  os-impl-heap.c  os-impl-module.c  os-impl-network.c  os-impl-sockets.c
src/os/portable/: os-impl-no-sockets.c  os-impl-no-symtab.c
